Respects the time scale information for a WRDS JSON source when the data is instantaneous (more work needed for other time scales).
Fixes #60158

Logs information about inconsistent time steps.

Refs #60032